feat(api) added new GetSignatureRequestIDsByEpoch endpoint
